# pixstage

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/: argb1555_alpha.rs  palette_cycle.rs  rectangle_and_line.rs  rgb565_checker.rs
src/: argb1555.rs  dirty.rs  indexed.rs  lib.rs  options.rs  rect.rs  rgb565.rs  rgba.rs  scaling.rs  shader.wgsl  surface.rs  texture.rs
src/shaders/: indexed.wgsl  rgba.wgsl
