[package]
name = "pixstage"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["Latias94 <superfrankie621@gmail.com>"]
description = "A canvas for drawing pixels"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = "0.19"
winit = "0.29"
log = "0.4"
pollster = "0.3"
anyhow = "1"
bytemuck = { version = "1.14", features = ["derive"] }

[dev-dependencies]
env_logger = "0.11"
cfg-if = "1"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
] }
