[package]
name = "pixstage"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Latias94 <superfrankie621@gmail.com>"]
description = "A canvas for drawing pixels"
readme = "README.md"
keywords = ["pixels", "2d", "gpu", "framebuffer"]
categories = ["graphics"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = "27.0.1"
raw-window-handle = "0.6"
thiserror = "1.0"
log = "0.4"
bytemuck = { version = "1.14", features = ["derive"] }

[dev-dependencies]
env_logger = "0.11"
winit = "0.30"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "27.0.1", default-features = false, features = ["webgl"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
] }
